# tham-

./: .gitignore  README.md
.github/workflows/: backend-tests.yml  content-validate.yml
backend/: pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: leaderboards.py  maps.py  problems.py  profile.py  sessions.py  uploads.py
backend/app/drills/: algebra.py  arithmetic.py  base.py  calculus.py  diffeq.py  expr_utils.py  function_library.py  limits.py  linalg.py  registry.py  trig.py
backend/app/engine/: difficulty.py  function_library.py  mastery.py  pp.py  profile_store.py  registry.py  scheduler.py  user_state.py  warmup.py
backend/tests/drills/: calculus.py  expr_utils.py  function_library.py  test_algebra.py  test_arithmetic.py  test_arithmetic_extended.py  test_calculus.py  test_diffeq.py  test_function_library.py  test_integrals.py  test_limits.py  test_linalg.py  test_trig.py
backend/tests/engine/: test_mastery.py  test_mastery_wiring.py  test_pp.py  test_pp_wiring.py  test_profile_store.py  test_scheduler.py  test_warmup.py
content/builtin-drills/: addition.json  algebraic-manipulation.json  cbrts.json  cubes.json  derivatives.json  division.json  integrals.json  limits.json  multiplication.json  ode-pde.json  rref.json  sqrts.json  squares.json  subtraction.json  trig-values.json
content/schema/: drill.schema.json  map.schema.json
docs/: ARCHITECTURE.md  DRILL_AUTHORING.md  MAP_HASHING.md  MASTERY_MODEL.md
frontend/: index.html  package.json
frontend/src/lib/: api.ts
frontend/standalone/: README.md  index.html
